added sign in with twitch button

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -46,6 +46,9 @@
         <button class="btn btn-block btn-live" ng-click="authenticate('live')">
           <i class="ion-social-windows"></i> Sign in with Windows Live
         </button>
+        <button class="btn btn-block btn-twitch" ng-click="authenticate('twitch')">
+          <i class="ion-social-twitch"></i> Sign in with Twitch
+        </button>
       </div>
     </div>
   </div>
