--- a/examples/client/stylesheets/styles.css
+++ b/examples/client/stylesheets/styles.css
@@ -305,13 +305,12 @@ ul {
 .btn-yahoo {
   color: #fff;
   background-color: #720e9e;
-  border: 1px solid #580b75;
 }
 
 .btn-yahoo:hover,
 .btn-yahoo:focus {
   color: #fff;
-  background-color: #303030;
+  background-color: #600e85;
 }
 
 .btn-live {
@@ -323,6 +322,17 @@ ul {
 .btn-live:focus {
   color: #fff;
   background-color: #125acd;
+}
+
+.btn-twitch {
+  color: #fff;
+  background-color: #6441a5;
+}
+
+.btn-twitch:hover,
+.btn-twitch:focus {
+  color: #fff;
+  background-color: #7550ba;
 }
 
 /*********************
