added instagram sign-in to the demo app

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -31,6 +31,9 @@
         <button class="btn btn-block btn-linkedin" ng-click="authenticate('linkedin')">
           <i class="ion-social-linkedin"></i> Sign in with LinkedIn
         </button>
+        <button class="btn btn-block btn-instagram" ng-click="authenticate('instagram')">
+          <i class="ion-social-instagram"></i> Sign in with Instagram
+        </button>
         <button class="btn btn-block btn-twitter" ng-click="authenticate('twitter')">
           <i class="ion-social-twitter"></i> Sign in with Twitter
         </button>
