--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -61,6 +61,13 @@
           <i class="ion-social-github"></i> Link GitHub Account
         </button>
 
+        <button class="btn btn-sm btn-danger" ng-if="user.github" ng-click="unlink('instagram')">
+          <i class="ion-social-instagram"></i> Unlink Instagram Account
+        </button>
+        <button class="btn btn-sm btn-primary" ng-if="!user.github" ng-click="link('instagram')">
+          <i class="ion-social-instagram"></i> Link Instagram Account
+        </button>
+
         <button class="btn btn-sm btn-danger" ng-if="user.foursquare" ng-click="unlink('foursquare')">
           <i class="ion-social-foursquare"></i> Unlink Foursquare Account
         </button>
