small copy and paste error

--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -61,10 +61,10 @@
           <i class="ion-social-github"></i> Link GitHub Account
         </button>
 
-        <button class="btn btn-sm btn-danger" ng-if="user.github" ng-click="unlink('instagram')">
+        <button class="btn btn-sm btn-danger" ng-if="user.instagram" ng-click="unlink('instagram')">
           <i class="ion-social-instagram"></i> Unlink Instagram Account
         </button>
-        <button class="btn btn-sm btn-primary" ng-if="!user.github" ng-click="link('instagram')">
+        <button class="btn btn-sm btn-primary" ng-if="!user.instagram" ng-click="link('instagram')">
           <i class="ion-social-instagram"></i> Link Instagram Account
         </button>
 
