added support for bitbucket provider.

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -52,6 +52,9 @@
         <button class="btn btn-block btn-twitch" ng-click="authenticate('twitch')">
           <i class="ion-social-twitch"></i> Sign in with Twitch
         </button>
+        <button class="btn btn-block btn-bitbucket" ng-click="authenticate('bitbucket')">
+          <i class="ion-ios-pint"></i> Sign in with Bitbucket
+        </button>
       </div>
     </div>
   </div>
