--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -95,6 +95,13 @@
         <button class="btn btn-sm btn-primary" ng-if="!user.twitch" ng-click="link('twitch')">
           <i class="ion-social-twitch"></i> Link Twitch Account
         </button>
+
+        <button class="btn btn-sm btn-danger" ng-if="user.twitch" ng-click="link('bitbucket')">
+          <i class="ion-ios-pint"></i> Unlink Bitbucket Account
+        </button>
+        <button class="btn btn-sm btn-primary" ng-if="!user.twitch" ng-click="link('bitbucket')">
+          <i class="ion-ios-pint"></i> Link Bitbucket Account
+        </button>
       </div>
     </div>
   </div>
