sign in with bitbucket button updates

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -43,6 +43,9 @@
         <button class="btn btn-block btn-github" ng-click="authenticate('github')">
           <i class="ion-social-github"></i> Sign in with GitHub
         </button>
+        <button class="btn btn-block btn-bitbucket" ng-click="authenticate('bitbucket')">
+          <i class="fa fa-bitbucket"></i> Sign in with Bitbucket
+        </button>
         <button class="btn btn-block btn-yahoo" ng-click="authenticate('yahoo')">
           <i class="ion-social-yahoo"></i> Sign in with Yahoo
         </button>
@@ -51,9 +54,6 @@
         </button>
         <button class="btn btn-block btn-twitch" ng-click="authenticate('twitch')">
           <i class="ion-social-twitch"></i> Sign in with Twitch
-        </button>
-        <button class="btn btn-block btn-bitbucket" ng-click="authenticate('bitbucket')">
-          <i class="ion-ios-pint"></i> Sign in with Bitbucket
         </button>
       </div>
     </div>
