--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -97,10 +97,10 @@
         </button>
 
         <button class="btn btn-sm btn-danger" ng-if="user.twitch" ng-click="link('bitbucket')">
-          <i class="ion-ios-pint"></i> Unlink Bitbucket Account
+          <i class="fa fa-bitbucket"></i> Unlink Bitbucket Account
         </button>
         <button class="btn btn-sm btn-primary" ng-if="!user.twitch" ng-click="link('bitbucket')">
-          <i class="ion-ios-pint"></i> Link Bitbucket Account
+          <i class="fa fa-bitbucket"></i> Link Bitbucket Account
         </button>
       </div>
     </div>
