--- a/examples/client/stylesheets/styles.css
+++ b/examples/client/stylesheets/styles.css
@@ -354,7 +354,7 @@ ul {
 .btn-bitbucket:hover,
 .btn-bitbucket:focus {
   color: #fff;
-  background-color: #a9c0d8;
+  background-color: #0d2c4a;
 }
 
 /*********************
