wip for spotify

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -55,6 +55,9 @@
         <button class="btn btn-block btn-twitch" ng-click="authenticate('twitch')">
           <i class="ion-social-twitch"></i> Sign in with Twitch
         </button>
+        <button class="btn btn-block btn-spotify" ng-click="authenticate('spotify')">
+          <i class="ion-social-spotify"></i> Sign in with Spotify
+        </button>
       </div>
     </div>
   </div>
