Fixed icon and added colors for spotify login button

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -56,7 +56,7 @@
           <i class="ion-social-twitch"></i> Sign in with Twitch
         </button>
         <button class="btn btn-block btn-spotify" ng-click="authenticate('spotify')">
-          <i class="ion-social-spotify"></i> Sign in with Spotify
+          <i class="fa fa-spotify"></i> Sign in with Spotify
         </button>
       </div>
     </div>
