--- a/examples/client/stylesheets/styles.css
+++ b/examples/client/stylesheets/styles.css
@@ -357,6 +357,17 @@ ul {
   background-color: #0d2c4a;
 }
 
+.btn-spotify {
+  color: #fff;
+  background-color: #454545;
+}
+
+.btn-spotify:hover,
+.btn-spotify:focus {
+  color: #fff;
+  background-color: #505050;
+}
+
 /*********************
 * Animations
 *********************/
