--- a/examples/client/stylesheets/styles.css
+++ b/examples/client/stylesheets/styles.css
@@ -359,13 +359,13 @@ ul {
 
 .btn-spotify {
   color: #fff;
-  background-color: #454545;
+  background-color: #2ebd59;
 }
 
 .btn-spotify:hover,
 .btn-spotify:focus {
   color: #fff;
-  background-color: #505050;
+  background-color: #29a34e;
 }
 
 /*********************
