feat: Added role based authentication support using angular-permission

--- a/examples/client/partials/admin.html
+++ b/examples/client/partials/admin.html
@@ -1,4 +1,4 @@
-<div permission permission-only="'USER'" class="container">
+<div permission permission-only="'ADMIN'" class="container">
   <div class="panel panel-default">
     <div class="panel-heading">Profile</div>
     <div class="panel-body">
