--- a/examples/client/partials/signup.html
+++ b/examples/client/partials/signup.html
@@ -33,6 +33,10 @@
               <div ng-message="compareTo">Password must match.</div>
             </div>
           </div>
+          <div class="form-group has-feedback">
+            <input class="form-control input-lg" type="checkbox" name="isAdmin" ng-model="user.isAdmin">
+            <small>Admin?</small>
+          </div>
           <p class="text-center text-muted"><small>By clicking on Sign up, you agree to <a href="#">terms & conditions</a> and <a href="#">privacy policy</a></small></p>
           <button type="submit" ng-disabled="signupForm.$invalid" class="btn btn-lg btn-block btn-primary">Sign up</button>
           <br/>
