--- a/examples/server/php/public/partials/home.html
+++ b/examples/server/php/public/partials/home.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <div class="text-center">
-  <a class="btn btn-default" href="https://github.com/sahat/satellizer"><i class="ion-social-github"></i> GitHub project</a>
-  <a class="btn btn-default" href="https://github.com/sahat/satellizer/issues/new"><i class="ion-bug"></i> Report issue</a>
+  <a class="btn btn-default" href="https://github.com/cskiwi/satellizer"><i class="ion-social-github"></i> GitHub project</a>
+  <a class="btn btn-default" href="https://github.com/cskiwi/satellizer/issues/new"><i class="ion-bug"></i> Report issue</a>
 </div>
 </div>
